SergeyLadutko/Hometask_8/kubernetes/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: sharks
spec:
  sessionAffinity: ClientIP
  selector:
    app: sharks
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharks-deployment
  labels:
    app: sharks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharks
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sharks
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sharks
        image: sergeyladutko/kuber:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          exec:
            command:
            - curl
            - mongodb:27017
