SergeyLadutko/Hometask_8/kubernetes/ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: shark.sergeyladutko.xyz
    http:
      paths:
      - backend:
          serviceName: sharks
          servicePort: 80
